@@ -7,7 +7,7 @@ import java.text.SimpleDateFormat
 import java.util.*
 
 object DummyDataRepository {
-    
+
     private val products = listOf(
         Product("1", "Coca Cola 350ml", "Bebida gaseosa", 1.50, 45, "Bebidas"),
         Product("2", "Pan Integral", "Pan de molde integral", 2.25, 12, "Panadería"),
@@ -20,7 +20,7 @@ object DummyDataRepository {
         Product("9", "Aceite Vegetal 1L", "Aceite de cocina", 4.20, 15, "Aceites"),
         Product("10", "Galletas Oreo", "Galletas de chocolate", 2.10, 40, "Snacks")
     )
-    
+
     private val customers = listOf(
         Customer("1", "María González", "maria@email.com", "+1234567890", "Calle 123, Ciudad", 150.50, "2024-01-15"),
         Customer("2", "Juan Pérez", "juan@email.com", "+1234567891", "Av. Principal 456", 89.75, "2024-01-14"),
@@ -31,31 +31,331 @@ object DummyDataRepository {
         Customer("7", "Isabel Torres", "isabel@email.com", "+1234567896", "Residencial 147", 165.40, "2024-01-09"),
         Customer("8", "Miguel Ruiz", "miguel@email.com", "+1234567897", "Colonial 258", 125.60, "2024-01-08")
     )
-    
+
     private val salesReports = listOf(
-        SaleReport("1", "2024-01-15", "María González", 
-            listOf(ProductSale("Coca Cola 350ml", 2, 1.50, 3.00), ProductSale("Pan Integral", 1, 2.25, 2.25)), 
+        SaleReport("1", "2024-01-15", "María González",
+            listOf(ProductSale("Coca Cola 350ml", 2, 1.50, 3.00), ProductSale("Pan Integral", 1, 2.25, 2.25)),
             5.25, "Efectivo"),
-        SaleReport("2", "2024-01-14", "Juan Pérez", 
-            listOf(ProductSale("Leche Entera 1L", 1, 3.80, 3.80), ProductSale("Yogurt Natural", 2, 1.80, 3.60)), 
+        SaleReport("2", "2024-01-14", "Juan Pérez",
+            listOf(ProductSale("Leche Entera 1L", 1, 3.80, 3.80), ProductSale("Yogurt Natural", 2, 1.80, 3.60)),
             7.40, "Tarjeta"),
-        SaleReport("3", "2024-01-13", "Ana Rodríguez", 
-            listOf(ProductSale("Arroz 1kg", 2, 4.50, 9.00), ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20)), 
+        SaleReport("3", "2024-01-13", "Ana Rodríguez",
+            listOf(ProductSale("Arroz 1kg", 2, 4.50, 9.00), ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20)),
             13.20, "Efectivo"),
-        SaleReport("4", "2024-01-12", "Carlos Martínez", 
-            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Manzanas Red", 2, 3.20, 6.40)), 
+        SaleReport("4", "2024-01-12", "Carlos Martínez",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Manzanas Red", 2, 3.20, 6.40)),
             13.15, "Transferencia"),
-        SaleReport("5", "2024-01-11", "Lucía Fernández", 
-            listOf(ProductSale("Detergente 500ml", 1, 5.90, 5.90), ProductSale("Galletas Oreo", 3, 2.10, 6.30)), 
-            12.20, "Tarjeta")
+        SaleReport("5", "2024-01-11", "Lucía Fernández",
+            listOf(ProductSale("Detergente 500ml", 1, 5.90, 5.90), ProductSale("Galletas Oreo", 3, 2.10, 6.30)),
+            12.20, "Tarjeta"),
+        SaleReport("6", "2025-05-31", "Pedro Sánchez",
+            listOf(ProductSale("Galletas Oreo", 2, 2.10, 4.20), ProductSale("Coca Cola 350ml", 3, 1.50, 4.50)),
+            8.70, "Efectivo"),
+        SaleReport("7", "2025-05-31", "Isabel Torres",
+            listOf(ProductSale("Leche Entera 1L", 2, 3.80, 7.60), ProductSale("Manzanas Red", 1, 3.20, 3.20)),
+            10.80, "Tarjeta"),
+        SaleReport("8", "2025-05-30", "Miguel Ruiz",
+            listOf(ProductSale("Arroz 1kg", 1, 4.50, 4.50), ProductSale("Yogurt Natural", 2, 1.80, 3.60)),
+            8.10, "Transferencia"),
+        SaleReport("9", "2025-05-30", "María González",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Detergente 500ml", 1, 5.90, 5.90)),
+            12.65, "Efectivo"),
+        SaleReport("10", "2025-05-30", "Juan Pérez",
+            listOf(ProductSale("Aceite Vegetal 1L", 2, 4.20, 8.40)),
+            8.40, "Tarjeta"),
+        SaleReport("11", "2025-05-29", "Ana Rodríguez",
+            listOf(ProductSale("Coca Cola 350ml", 1, 1.50, 1.50), ProductSale("Pan Integral", 2, 2.25, 4.50)),
+            6.00, "Efectivo"),
+        SaleReport("12", "2025-05-29", "Carlos Martínez",
+            listOf(ProductSale("Manzanas Red", 3, 3.20, 9.60), ProductSale("Galletas Oreo", 1, 2.10, 2.10)),
+            11.70, "Transferencia"),
+        SaleReport("13", "2025-05-28", "Lucía Fernández",
+            listOf(ProductSale("Leche Entera 1L", 1, 3.80, 3.80), ProductSale("Arroz 1kg", 1, 4.50, 4.50)),
+            8.30, "Tarjeta"),
+        SaleReport("14", "2025-05-28", "Pedro Sánchez",
+            listOf(ProductSale("Yogurt Natural", 3, 1.80, 5.40), ProductSale("Detergente 500ml", 1, 5.90, 5.90)),
+            11.30, "Efectivo"),
+        SaleReport("15", "2025-05-27", "Isabel Torres",
+            listOf(ProductSale("Coca Cola 350ml", 2, 1.50, 3.00), ProductSale("Pollo entero", 1, 6.75, 6.75)),
+            9.75, "Tarjeta"),
+        SaleReport("16", "2025-05-27", "Miguel Ruiz",
+            listOf(ProductSale("Pan Integral", 1, 2.25, 2.25), ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20)),
+            6.45, "Transferencia"),
+        SaleReport("17", "2025-05-27", "María González",
+            listOf(ProductSale("Manzanas Red", 2, 3.20, 6.40), ProductSale("Galletas Oreo", 2, 2.10, 4.20)),
+            10.60, "Efectivo"),
+        SaleReport("18", "2025-05-26", "Juan Pérez",
+            listOf(ProductSale("Leche Entera 1L", 2, 3.80, 7.60)),
+            7.60, "Tarjeta"),
+        SaleReport("19", "2025-05-26", "Ana Rodríguez",
+            listOf(ProductSale("Arroz 1kg", 1, 4.50, 4.50), ProductSale("Yogurt Natural", 2, 1.80, 3.60)),
+            8.10, "Efectivo"),
+        SaleReport("20", "2025-05-25", "Carlos Martínez",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Coca Cola 350ml", 3, 1.50, 4.50)),
+            11.25, "Transferencia"),
+        SaleReport("21", "2025-05-25", "Lucía Fernández",
+            listOf(ProductSale("Detergente 500ml", 1, 5.90, 5.90), ProductSale("Manzanas Red", 1, 3.20, 3.20)),
+            9.10, "Tarjeta"),
+        SaleReport("22", "2025-05-24", "Pedro Sánchez",
+            listOf(ProductSale("Galletas Oreo", 2, 2.10, 4.20), ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20)),
+            8.40, "Efectivo"),
+        SaleReport("23", "2025-05-24", "Isabel Torres",
+            listOf(ProductSale("Pan Integral", 2, 2.25, 4.50), ProductSale("Leche Entera 1L", 1, 3.80, 3.80)),
+            8.30, "Tarjeta"),
+        SaleReport("24", "2025-05-23", "Miguel Ruiz",
+            listOf(ProductSale("Coca Cola 350ml", 1, 1.50, 1.50), ProductSale("Arroz 1kg", 2, 4.50, 9.00)),
+            10.50, "Transferencia"),
+        SaleReport("25", "2025-05-23", "María González",
+            listOf(ProductSale("Yogurt Natural", 3, 1.80, 5.40)),
+            5.40, "Efectivo"),
+        SaleReport("26", "2025-05-22", "Juan Pérez",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Manzanas Red", 2, 3.20, 6.40)),
+            13.15, "Tarjeta"),
+        SaleReport("27", "2025-05-22", "Ana Rodríguez",
+            listOf(ProductSale("Detergente 500ml", 1, 5.90, 5.90), ProductSale("Galletas Oreo", 1, 2.10, 2.10)),
+            8.00, "Transferencia"),
+        SaleReport("28", "2025-05-21", "Carlos Martínez",
+            listOf(ProductSale("Coca Cola 350ml", 2, 1.50, 3.00), ProductSale("Pan Integral", 1, 2.25, 2.25)),
+            5.25, "Efectivo"),
+        SaleReport("29", "2025-05-21", "Lucía Fernández",
+            listOf(ProductSale("Leche Entera 1L", 1, 3.80, 3.80), ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20)),
+            8.00, "Tarjeta"),
+        SaleReport("30", "2025-05-20", "Pedro Sánchez",
+            listOf(ProductSale("Arroz 1kg", 2, 4.50, 9.00), ProductSale("Yogurt Natural", 2, 1.80, 3.60)),
+            12.60, "Efectivo"),
+        SaleReport("31", "2025-05-20", "Isabel Torres",
+            listOf(ProductSale("Manzanas Red", 1, 3.20, 3.20), ProductSale("Galletas Oreo", 3, 2.10, 6.30)),
+            9.50, "Transferencia"),
+        SaleReport("32", "2025-05-19", "Miguel Ruiz",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75)),
+            6.75, "Tarjeta"),
+        SaleReport("33", "2025-05-19", "María González",
+            listOf(ProductSale("Coca Cola 350ml", 3, 1.50, 4.50), ProductSale("Detergente 500ml", 1, 5.90, 5.90)),
+            10.40, "Efectivo"),
+        SaleReport("34", "2025-05-18", "Juan Pérez",
+            listOf(ProductSale("Leche Entera 1L", 2, 3.80, 7.60), ProductSale("Pan Integral", 1, 2.25, 2.25)),
+            9.85, "Tarjeta"),
+        SaleReport("35", "2025-05-18", "Ana Rodríguez",
+            listOf(ProductSale("Arroz 1kg", 1, 4.50, 4.50), ProductSale("Manzanas Red", 2, 3.20, 6.40)),
+            10.90, "Transferencia"),
+        SaleReport("36", "2025-05-17", "Carlos Martínez",
+            listOf(ProductSale("Yogurt Natural", 2, 1.80, 3.60), ProductSale("Galletas Oreo", 1, 2.10, 2.10)),
+            5.70, "Efectivo"),
+        SaleReport("37", "2025-05-17", "Lucía Fernández",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Coca Cola 350ml", 2, 1.50, 3.00)),
+            9.75, "Tarjeta"),
+        SaleReport("38", "2025-05-16", "Pedro Sánchez",
+            listOf(ProductSale("Detergente 500ml", 1, 5.90, 5.90), ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20)),
+            10.10, "Transferencia"),
+        SaleReport("39", "2025-05-16", "Isabel Torres",
+            listOf(ProductSale("Pan Integral", 2, 2.25, 4.50), ProductSale("Leche Entera 1L", 1, 3.80, 3.80)),
+            8.30, "Efectivo"),
+        SaleReport("40", "2025-05-15", "Miguel Ruiz",
+            listOf(ProductSale("Manzanas Red", 3, 3.20, 9.60)),
+            9.60, "Tarjeta"),
+        SaleReport("41", "2025-05-15", "María González",
+            listOf(ProductSale("Arroz 1kg", 1, 4.50, 4.50), ProductSale("Yogurt Natural", 2, 1.80, 3.60)),
+            8.10, "Transferencia"),
+        SaleReport("42", "2025-05-14", "Juan Pérez",
+            listOf(ProductSale("Coca Cola 350ml", 2, 1.50, 3.00), ProductSale("Galletas Oreo", 2, 2.10, 4.20)),
+            7.20, "Efectivo"),
+        SaleReport("43", "2025-05-14", "Ana Rodríguez",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Detergente 500ml", 1, 5.90, 5.90)),
+            12.65, "Tarjeta"),
+        SaleReport("44", "2025-05-13", "Carlos Martínez",
+            listOf(ProductSale("Leche Entera 1L", 1, 3.80, 3.80), ProductSale("Manzanas Red", 2, 3.20, 6.40)),
+            10.20, "Transferencia"),
+        SaleReport("45", "2025-05-13", "Lucía Fernández",
+            listOf(ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20), ProductSale("Pan Integral", 1, 2.25, 2.25)),
+            6.45, "Efectivo"),
+        SaleReport("46", "2025-05-12", "Pedro Sánchez",
+            listOf(ProductSale("Galletas Oreo", 3, 2.10, 6.30), ProductSale("Coca Cola 350ml", 1, 1.50, 1.50)),
+            7.80, "Tarjeta"),
+        SaleReport("47", "2025-05-12", "Isabel Torres",
+            listOf(ProductSale("Arroz 1kg", 2, 4.50, 9.00)),
+            9.00, "Transferencia"),
+        SaleReport("48", "2025-05-11", "Miguel Ruiz",
+            listOf(ProductSale("Yogurt Natural", 2, 1.80, 3.60), ProductSale("Manzanas Red", 1, 3.20, 3.20)),
+            6.80, "Efectivo"),
+        SaleReport("49", "2025-05-11", "María González",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Detergente 500ml", 1, 5.90, 5.90)),
+            12.65, "Tarjeta"),
+        SaleReport("50", "2025-05-10", "Juan Pérez",
+            listOf(ProductSale("Coca Cola 350ml", 3, 1.50, 4.50), ProductSale("Leche Entera 1L", 1, 3.80, 3.80)),
+            8.30, "Transferencia"),
+        SaleReport("51", "2025-05-10", "Ana Rodríguez",
+            listOf(ProductSale("Pan Integral", 2, 2.25, 4.50), ProductSale("Galletas Oreo", 1, 2.10, 2.10)),
+            6.60, "Efectivo"),
+        SaleReport("52", "2025-05-09", "Carlos Martínez",
+            listOf(ProductSale("Manzanas Red", 2, 3.20, 6.40), ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20)),
+            10.60, "Tarjeta"),
+        SaleReport("53", "2025-05-09", "Lucía Fernández",
+            listOf(ProductSale("Arroz 1kg", 1, 4.50, 4.50), ProductSale("Yogurt Natural", 2, 1.80, 3.60)),
+            8.10, "Transferencia"),
+        SaleReport("54", "2025-05-08", "Pedro Sánchez",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Coca Cola 350ml", 2, 1.50, 3.00)),
+            9.75, "Efectivo"),
+        SaleReport("55", "2025-05-08", "Isabel Torres",
+            listOf(ProductSale("Detergente 500ml", 1, 5.90, 5.90), ProductSale("Pan Integral", 1, 2.25, 2.25)),
+            8.15, "Tarjeta"),
+        SaleReport("56", "2025-05-07", "Miguel Ruiz",
+            listOf(ProductSale("Leche Entera 1L", 2, 3.80, 7.60), ProductSale("Galletas Oreo", 2, 2.10, 4.20)),
+            11.80, "Transferencia"),
+        SaleReport("57", "2025-05-07", "María González",
+            listOf(ProductSale("Manzanas Red", 1, 3.20, 3.20), ProductSale("Arroz 1kg", 1, 4.50, 4.50)),
+            7.70, "Efectivo"),
+        SaleReport("58", "2025-05-06", "Juan Pérez",
+            listOf(ProductSale("Coca Cola 350ml", 2, 1.50, 3.00), ProductSale("Yogurt Natural", 3, 1.80, 5.40)),
+            8.40, "Tarjeta"),
+        SaleReport("59", "2025-05-06", "Ana Rodríguez",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20)),
+            10.95, "Transferencia"),
+        SaleReport("60", "2025-05-05", "Carlos Martínez",
+            listOf(ProductSale("Detergente 500ml", 1, 5.90, 5.90), ProductSale("Manzanas Red", 2, 3.20, 6.40)),
+            12.30, "Efectivo"),
+        SaleReport("61", "2025-05-05", "Lucía Fernández",
+            listOf(ProductSale("Pan Integral", 1, 2.25, 2.25), ProductSale("Galletas Oreo", 2, 2.10, 4.20)),
+            6.45, "Tarjeta"),
+        SaleReport("62", "2025-05-04", "Pedro Sánchez",
+            listOf(ProductSale("Leche Entera 1L", 1, 3.80, 3.80), ProductSale("Coca Cola 350ml", 3, 1.50, 4.50)),
+            8.30, "Transferencia"),
+        SaleReport("63", "2025-05-04", "Isabel Torres",
+            listOf(ProductSale("Arroz 1kg", 2, 4.50, 9.00), ProductSale("Yogurt Natural", 1, 1.80, 1.80)),
+            10.80, "Efectivo"),
+        SaleReport("64", "2025-05-03", "Miguel Ruiz",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Manzanas Red", 1, 3.20, 3.20)),
+            9.95, "Tarjeta"),
+        SaleReport("65", "2025-05-03", "María González",
+            listOf(ProductSale("Coca Cola 350ml", 2, 1.50, 3.00), ProductSale("Detergente 500ml", 1, 5.90, 5.90)),
+            8.90, "Transferencia"),
+        SaleReport("66", "2025-05-02", "Juan Pérez",
+            listOf(ProductSale("Pan Integral", 2, 2.25, 4.50), ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20)),
+            8.70, "Efectivo"),
+        SaleReport("67", "2025-05-02", "Ana Rodríguez",
+            listOf(ProductSale("Leche Entera 1L", 1, 3.80, 3.80), ProductSale("Galletas Oreo", 2, 2.10, 4.20)),
+            8.00, "Tarjeta"),
+        SaleReport("68", "2025-05-01", "Carlos Martínez",
+            listOf(ProductSale("Arroz 1kg", 1, 4.50, 4.50), ProductSale("Yogurt Natural", 2, 1.80, 3.60)),
+            8.10, "Transferencia"),
+        SaleReport("69", "2025-05-01", "Lucía Fernández",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Coca Cola 350ml", 2, 1.50, 3.00)),
+            9.75, "Efectivo"),
+        SaleReport("70", "2025-04-30", "Pedro Sánchez",
+            listOf(ProductSale("Manzanas Red", 2, 3.20, 6.40), ProductSale("Detergente 500ml", 1, 5.90, 5.90)),
+            12.30, "Tarjeta"),
+        SaleReport("71", "2025-04-30", "Isabel Torres",
+            listOf(ProductSale("Pan Integral", 1, 2.25, 2.25), ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20)),
+            6.45, "Transferencia"),
+        SaleReport("72", "2025-04-29", "Miguel Ruiz",
+            listOf(ProductSale("Leche Entera 1L", 2, 3.80, 7.60), ProductSale("Galletas Oreo", 1, 2.10, 2.10)),
+            9.70, "Efectivo"),
+        SaleReport("73", "2025-04-29", "María González",
+            listOf(ProductSale("Coca Cola 350ml", 3, 1.50, 4.50), ProductSale("Yogurt Natural", 1, 1.80, 1.80)),
+            6.30, "Tarjeta"),
+        SaleReport("74", "2025-04-28", "Juan Pérez",
+            listOf(ProductSale("Arroz 1kg", 1, 4.50, 4.50), ProductSale("Manzanas Red", 2, 3.20, 6.40)),
+            10.90, "Transferencia"),
+        SaleReport("75", "2025-04-28", "Ana Rodríguez",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Pan Integral", 1, 2.25, 2.25)),
+            9.00, "Efectivo"),
+        SaleReport("76", "2025-04-27", "Carlos Martínez",
+            listOf(ProductSale("Detergente 500ml", 1, 5.90, 5.90), ProductSale("Coca Cola 350ml", 2, 1.50, 3.00)),
+            8.90, "Tarjeta"),
+        SaleReport("77", "2025-04-27", "Lucía Fernández",
+            listOf(ProductSale("Galletas Oreo", 2, 2.10, 4.20), ProductSale("Leche Entera 1L", 1, 3.80, 3.80)),
+            8.00, "Transferencia"),
+        SaleReport("78", "2025-04-26", "Pedro Sánchez",
+            listOf(ProductSale("Manzanas Red", 1, 3.20, 3.20), ProductSale("Yogurt Natural", 2, 1.80, 3.60)),
+            6.80, "Efectivo"),
+        SaleReport("79", "2025-04-26", "Isabel Torres",
+            listOf(ProductSale("Arroz 1kg", 2, 4.50, 9.00), ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20)),
+            13.20, "Tarjeta"),
+        SaleReport("80", "2025-04-25", "Miguel Ruiz",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Coca Cola 350ml", 3, 1.50, 4.50)),
+            11.25, "Transferencia"),
+        SaleReport("81", "2025-04-25", "María González",
+            listOf(ProductSale("Detergente 500ml", 1, 5.90, 5.90), ProductSale("Pan Integral", 1, 2.25, 2.25)),
+            8.15, "Efectivo"),
+        SaleReport("82", "2025-04-24", "Juan Pérez",
+            listOf(ProductSale("Leche Entera 1L", 2, 3.80, 7.60), ProductSale("Galletas Oreo", 2, 2.10, 4.20)),
+            11.80, "Tarjeta"),
+        SaleReport("83", "2025-04-24", "Ana Rodríguez",
+            listOf(ProductSale("Manzanas Red", 2, 3.20, 6.40), ProductSale("Yogurt Natural", 1, 1.80, 1.80)),
+            8.20, "Transferencia"),
+        SaleReport("84", "2025-04-23", "Carlos Martínez",
+            listOf(ProductSale("Coca Cola 350ml", 2, 1.50, 3.00), ProductSale("Arroz 1kg", 1, 4.50, 4.50)),
+            7.50, "Efectivo"),
+        SaleReport("85", "2025-04-23", "Lucía Fernández",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20)),
+            10.95, "Tarjeta"),
+        SaleReport("86", "2025-04-22", "Pedro Sánchez",
+            listOf(ProductSale("Detergente 500ml", 1, 5.90, 5.90), ProductSale("Manzanas Red", 2, 3.20, 6.40)),
+            12.30, "Transferencia"),
+        SaleReport("87", "2025-04-22", "Isabel Torres",
+            listOf(ProductSale("Pan Integral", 1, 2.25, 2.25), ProductSale("Galletas Oreo", 2, 2.10, 4.20)),
+            6.45, "Efectivo"),
+        SaleReport("88", "2025-04-21", "Miguel Ruiz",
+            listOf(ProductSale("Leche Entera 1L", 1, 3.80, 3.80), ProductSale("Coca Cola 350ml", 3, 1.50, 4.50)),
+            8.30, "Tarjeta"),
+        SaleReport("89", "2025-04-21", "María González",
+            listOf(ProductSale("Arroz 1kg", 2, 4.50, 9.00), ProductSale("Yogurt Natural", 1, 1.80, 1.80)),
+            10.80, "Transferencia"),
+        SaleReport("90", "2025-04-20", "Juan Pérez",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Manzanas Red", 1, 3.20, 3.20)),
+            9.95, "Efectivo"),
+        SaleReport("91", "2025-04-20", "Ana Rodríguez",
+            listOf(ProductSale("Coca Cola 350ml", 2, 1.50, 3.00), ProductSale("Detergente 500ml", 1, 5.90, 5.90)),
+            8.90, "Tarjeta"),
+        SaleReport("92", "2025-04-19", "Carlos Martínez",
+            listOf(ProductSale("Pan Integral", 2, 2.25, 4.50), ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20)),
+            8.70, "Transferencia"),
+        SaleReport("93", "2025-04-19", "Lucía Fernández",
+            listOf(ProductSale("Leche Entera 1L", 1, 3.80, 3.80), ProductSale("Galletas Oreo", 2, 2.10, 4.20)),
+            8.00, "Efectivo"),
+        SaleReport("94", "2025-04-18", "Pedro Sánchez",
+            listOf(ProductSale("Arroz 1kg", 1, 4.50, 4.50), ProductSale("Yogurt Natural", 2, 1.80, 3.60)),
+            8.10, "Tarjeta"),
+        SaleReport("95", "2025-04-18", "Isabel Torres",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Coca Cola 350ml", 2, 1.50, 3.00)),
+            9.75, "Transferencia"),
+        SaleReport("96", "2025-04-17", "Miguel Ruiz",
+            listOf(ProductSale("Manzanas Red", 2, 3.20, 6.40), ProductSale("Detergente 500ml", 1, 5.90, 5.90)),
+            12.30, "Efectivo"),
+        SaleReport("97", "2025-04-17", "María González",
+            listOf(ProductSale("Pan Integral", 1, 2.25, 2.25), ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20)),
+            6.45, "Tarjeta"),
+        SaleReport("98", "2025-04-16", "Juan Pérez",
+            listOf(ProductSale("Leche Entera 1L", 2, 3.80, 7.60), ProductSale("Galletas Oreo", 1, 2.10, 2.10)),
+            9.70, "Transferencia"),
+        SaleReport("99", "2025-04-16", "Ana Rodríguez",
+            listOf(ProductSale("Coca Cola 350ml", 3, 1.50, 4.50), ProductSale("Yogurt Natural", 1, 1.80, 1.80)),
+            6.30, "Efectivo"),
+        SaleReport("100", "2025-04-15", "Carlos Martínez",
+            listOf(ProductSale("Arroz 1kg", 1, 4.50, 4.50), ProductSale("Manzanas Red", 2, 3.20, 6.40)),
+            10.90, "Tarjeta"),
+        SaleReport("101", "2025-04-15", "Lucía Fernández",
+            listOf(ProductSale("Pollo entero", 1, 6.75, 6.75), ProductSale("Pan Integral", 1, 2.25, 2.25)),
+            9.00, "Transferencia"),
+        SaleReport("102", "2025-04-14", "Pedro Sánchez",
+            listOf(ProductSale("Detergente 500ml", 1, 5.90, 5.90), ProductSale("Coca Cola 350ml", 2, 1.50, 3.00)),
+            8.90, "Efectivo"),
+        SaleReport("103", "2025-04-14", "Isabel Torres",
+            listOf(ProductSale("Galletas Oreo", 2, 2.10, 4.20), ProductSale("Leche Entera 1L", 1, 3.80, 3.80)),
+            8.00, "Tarjeta"),
+        SaleReport("104", "2025-04-13", "Miguel Ruiz",
+            listOf(ProductSale("Manzanas Red", 1, 3.20, 3.20), ProductSale("Yogurt Natural", 2, 1.80, 3.60)),
+            6.80, "Transferencia"),
+        SaleReport("105", "2025-04-13", "María González",
+            listOf(ProductSale("Arroz 1kg", 2, 4.50, 9.00), ProductSale("Aceite Vegetal 1L", 1, 4.20, 4.20)),
+            13.20, "Efectivo")
     )
-    
+
     fun getProducts(): Flow<List<Product>> = flowOf(products)
-    
+
     fun getCustomers(): Flow<List<Customer>> = flowOf(customers)
-    
+
     fun getSalesReports(): Flow<List<SaleReport>> = flowOf(salesReports)
-    
+
     fun getReportSummary(fromDate: String, toDate: String): Flow<ReportSummary> {
         val totalSales = salesReports.sumOf { it.total }
         return flowOf(
