@@ -80,3 +80,4 @@
 [2025-06-09 01:52:19]	No se encontró una version válida	Automatic update
 [2025-06-09 12:49:45]	No se encontró una version válida	Se ha creado utilidad SystemUtils.isEmulator()
 [2025-06-09 14:42:25]	No se encontró una version válida	Vista dummy de Scanner OK
+[2025-06-09 16:46:34]	No se encontró una version válida	Previo update de vista de Products e Inventory
